<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/techback"
    tools:context=".QuizTwo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="229dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/boxque"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queNumTech" />

    <TextView
        android:id="@+id/queTextTech"
        android:layout_width="262dp"
        android:layout_height="186dp"
        android:alpha="1"
        android:gravity="center"
        android:text="@string/question_11"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <Button
        android:id="@+id/button"
        android:layout_width="246dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginTop="88dp"

        android:background="@drawable/tandfbtn"
        android:onClick="trueButton"
        android:text="@string/trueandfalse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="247dp"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"

        android:background="@drawable/tandfbtn"
        android:onClick="falseButton"
        android:text="@string/falseandtrue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/scoreTextTech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="52dp"
        android:text="@string/score_0_10"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ProgressBar
        android:id="@+id/progressBarViewTech"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="315dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:background="#B4BEDD"
        android:progressBackgroundTint="#E42112"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextTech" />

    <TextView
        android:id="@+id/queNumTech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="259dp"
        android:text="@string/q_0_20"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>